<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="DECOMPILING">Decompiling...</string>
    <string name="LOADING">Loading...</string>
    <string name="Shielding">Unselect</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_author">TopCombine</string>
    <string name="about_author_email">Email:3128669985@qq.com</string>
    <string name="about_author_qq">QQ:3128669985</string>
    <string name="about_author_qq_xy">QQ:2374995384</string>
    <string name="about_author_xy">£夕颜</string>
    <string name="about_declaration" />
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="add_file">Select File</string>
    <string name="app_name">My Application</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">No more data</string>
    <string name="brvah_load_failed">Load failed, tap to retry</string>
    <string name="brvah_loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_code">Check Code</string>
    <string name="decompile_failed">Decompilation failed</string>
    <string name="decompile_succeeded">Decompilation succeeded</string>
    <string name="decompline">Decompile</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">"Here's a message!"</string>
    <string name="dialog_ok">OK</string>
    <string name="drawer_closed">Close</string>
    <string name="drawer_open">Open</string>
    <string name="enter_range">Enter instruction count range</string>
    <string name="export_to_file">Export to file</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="import_failed">Import failed!</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="no_compile">This script is not a 5.2 compiled script. Compile and import?</string>
    <string name="no_lua52">This script may not be a valid Lua 5.2 script. Continue?</string>
    <string name="ok">OK</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="search_menu_title">Search</string>
    <string name="select_all">Select all</string>
    <string name="select_range">Select range</string>
    <string name="select_reverse">Invert selection</string>
    <string name="setting">Settings</string>
    <string name="setting_configuration_decl">Configuration may cause errors or incomplete code</string>
    <string name="setting_configuration_title">Configure ignored instructions</string>
    <string name="setting_donate_decl">If you find this software useful, maybe buy me a pack of spicy strips~</string>
    <string name="setting_donate_title">Donate</string>
    <string name="setting_joinQQGroup_title">Join Group Chat</string>
    <string name="setting_jump_title">Modify shortcut file path entry</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_color">ColorActivity</string>
    <string name="title_activity_elevation_sample">ElevationSampleActivity</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
</resources>
