<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar android:gravity="center_vertical" android:id="@id/tb_decision_settings" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="22.0sp" android:textColor="#ff444444" android:id="@id/tv_decision_list_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/setting" android:layout_marginStart="16.0dip" />
        <ImageView android:layout_gravity="end" android:id="@id/iv_decision_done" android:padding="12.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_done" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout android:id="@id/configuration" android:visibility="gone" android:layout_marginTop="16.0dip" style="@style/set_item_linearlaout">
        <ImageView android:src="@drawable/checklist" style="@style/set_item_imageview" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/setting_configuration_title" style="@style/set_item_title" />
            <TextView android:text="@string/setting_configuration_decl" style="@style/set_item_decl" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@id/lay_sw" android:layout_marginTop="16.0dip" style="@style/set_item_linearlaout">
        <ImageView android:id="@id/image" android:src="@drawable/checklist" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" style="@style/set_item_imageview" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_toEndOf="@id/image">
            <TextView android:id="@id/tv" android:text="Automatic Mode" style="@style/set_item_title" />
            <TextView android:text="Select Ignore Mode" style="@style/set_item_decl" />
        </LinearLayout>
        <Switch android:id="@id/sw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/lay_str_pattern" android:layout_marginTop="16.0dip" style="@style/set_item_linearlaout">
        <ImageView android:id="@id/image_str" android:src="@drawable/checklist" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" style="@style/set_item_imageview" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_toEndOf="@id/image_str">
            <TextView android:id="@id/str_1" android:text="Automatic Mode" style="@style/set_item_title" />
            <TextView android:text="Select String Mode" style="@style/set_item_decl" />
        </LinearLayout>
        <Switch android:id="@id/str_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout android:id="@id/jump" android:layout_marginTop="16.0dip" style="@style/set_item_linearlaout">
        <ImageView android:src="@drawable/telegram" style="@style/set_item_imageview" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/setting_jump_title" style="@style/set_item_title" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/joinQQGroup" android:layout_marginTop="16.0dip" style="@style/set_item_linearlaout">
        <ImageView android:src="@drawable/talk" style="@style/set_item_imageview" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/setting_joinQQGroup_title" style="@style/set_item_title" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/donate" android:layout_marginTop="16.0dip" style="@style/set_item_linearlaout">
        <ImageView android:src="@drawable/ic_donate" style="@style/set_item_imageview" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/setting_donate_title" style="@style/set_item_title" />
            <TextView android:text="@string/setting_donate_decl" style="@style/set_item_decl" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
