<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:background="@mipmap/about_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@id/appbarlayout_about_fragment" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout android:layout_width="fill_parent" android:layout_height="260.0dip" app:layout_scrollFlags="scroll|exitUntilCollapsed|snap" app:statusBarScrim="@android:color/transparent" app:titleEnabled="false">
            <ImageView android:id="@id/iv_header" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@mipmap/about_head_bg" android:scaleType="centerCrop" app:layout_collapseMode="parallax" app:layout_collapseParallaxMultiplier="0.7" />
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_tc" android:scaleType="centerCrop" app:layout_collapseMode="parallax" app:layout_collapseParallaxMultiplier="0.7" />
                <TextView android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_version_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="V1.3" />
            </LinearLayout>
            <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_collapseMode="pin" app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" app:navigationIcon="@mipmap/ic_arrow_back_white" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:title="About" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" app:behavior_overlapTop="40.0dip" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <android.support.v7.widget.CardView android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" app:cardCornerRadius="4.0dip" app:cardElevation="6.0dip" app:contentPaddingTop="16.0dip">
                <TextView android:textSize="16.0sp" android:id="@id/tv_card_about_fragment" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="· This application is a practice project and completely free.\n\n· The author is not responsible for you and assumes no liability.\n\n· If you have any good suggestions, feel free to give feedback.\n\n· Some ideas are inspired by SSTOOL.\n\n· Software tester: 龙祥 (QQ: 2676039490).\n\n· No guarantee that every script can be decompiled.\n\n· Due to being busy with studies, the project is temporarily abandoned.\n\n· Assisted developer: 夕颜.\n\n· With TC’s permission, the software was optimized and refined.\n\n· Thanks to TC for trust and help." />
            </android.support.v7.widget.CardView>

            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="About the Author" />

            <android.support.v7.widget.CardView android:layout_gravity="center_horizontal" android:id="@id/cv_author" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" app:cardCornerRadius="4.0dip" app:cardElevation="10.0dip" app:contentPaddingBottom="16.0dip" app:contentPaddingTop="16.0dip">
                <RelativeLayout android:id="@id/author" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@id/civ_author_head" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_margin="10.0dip" android:src="@mipmap/header_icon" android:scaleType="centerCrop" android:layout_centerVertical="true" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toEndOf="@id/civ_author_head">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/about_author" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/about_author_qq" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_gravity="center_horizontal" android:id="@id/cv_author_xy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" app:cardCornerRadius="4.0dip" app:cardElevation="10.0dip" app:contentPaddingBottom="16.0dip" app:contentPaddingTop="16.0dip">
                <RelativeLayout android:id="@id/author_xy" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@id/civ_author_head_xy" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_margin="10.0dip" android:src="@mipmap/xy" android:scaleType="centerCrop" android:layout_centerVertical="true" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toEndOf="@id/civ_author_head_xy">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/about_author_xy" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/about_author_qq_xy" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <RelativeLayout android:gravity="bottom" android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <TextView android:textColor="#b3ffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="20.0dip" android:text="Copyright © 2021" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:drawableStart="@drawable/about_icon_copy_right" android:layout_marginStart="-20.0dip" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
